azure/namespaces-dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    environment: dev
