azure/namespaces-devops.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    environment: devops
