azure/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    environment: staging
