azure/bank-ingress-dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bank-gateway
  labels:
    app.kubernetes.io/instance: bank-gateway-dev
    app.kubernetes.io/name: bank-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: dev.fnf.local
    http:
      paths:
      - path: /account(/|$)(.*)
        backend:
          serviceName: bank-account
          servicePort: 8080
      - path: /customer(/|$)(.*)
        backend:
          serviceName: bank-customer
          servicePort: 8080
